# symgraph

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  catalog-info.yaml  install.ps1  install.sh  manifest.json  prek.toml
.claude/skills/explore-code/: SKILL.md
.github/workflows/: ci.yml  release.yml
Formula/: symgraph.rb
devcontainer-feature/src/codemap/: README.md  devcontainer-feature.json  install.sh
devcontainer-feature/src/symgraph/: README.md  devcontainer-feature.json  install.sh
devcontainer-feature/test/codemap/: test.sh
devcontainer-feature/test/symgraph/: test.sh
docs/: cli-mcp-parity.md
src/: coupling.rs  lib.rs  main.rs  ops.rs  security.rs  server.rs  types.rs
src/cli/: commands.rs  db_utils.rs  mod.rs  tools.rs
src/context/: mod.rs
src/db/: mod.rs  schema.rs
src/extraction/: languages.rs  manifest.rs  mod.rs
src/graph/: mod.rs
src/main/: server.rs
src/mcp/: mod.rs  types.rs
src/mcp/handlers/: blame.rs  churn.rs  context.rs  diff_impact.rs  dispatch_sites.rs  file.rs  god_struct.rs  graph.rs  hierarchy.rs  implementations.rs  mod.rs  module_graph.rs  path.rs  reindex.rs  search.rs  status.rs  symbol.rs  unused.rs
src/ops/: constants.rs  format.rs  mod.rs
tests/: integration_test.rs
