[package]
name = "codemap"
version = "0.1.3"
edition = "2021"
description = "Semantic code intelligence MCP server - build knowledge graphs of codebases"
license = "MIT"
authors = ["Graham Brooks"]
keywords = ["mcp", "code-analysis", "tree-sitter", "semantic-search"]

[dependencies]
# MCP protocol
rmcp = { version = "0.16.0", features = ["server", "server", "macros", "transport-io", "transport-streamable-http-server"] }

# HTTP server
axum = "0.8"
tokio-util = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Tree-sitter for code parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

# Database
rusqlite = { version = "0.38.0", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Utilities
ignore = "0.4"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "codemap"
path = "src/main.rs"
