[package]
name = "symgraph"
version = "2026.4.12"
edition = "2021"
description = "Semantic code intelligence library and MCP server - build knowledge graphs of codebases"
license = "MIT"
authors = ["Graham Brooks"]
repository = "https://github.com/grahambrooks/symgraph"
homepage = "https://github.com/grahambrooks/symgraph"
readme = "README.md"
keywords = ["mcp", "code-analysis", "tree-sitter", "semantic-search"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    "target/*",
    ".github/*",
    "devcontainer-feature/*",
    "tests/fixtures/*",
    "*.mcpb",
    "*.png",
]

[dependencies]
# MCP protocol
rmcp = { version = "1.1.0", features = ["server", "server", "macros", "transport-io", "transport-streamable-http-server"] }

# HTTP server
axum = "0.8"
tokio-util = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Tree-sitter for code parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-scala = "0.25"
tree-sitter-groovy = "0.1.2"

# Database
rusqlite = { version = "0.38.0", features = ["bundled"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"

# Parallelism
rayon = "1.10"

# Utilities
ignore = "0.4"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "symgraph"
path = "src/main.rs"
