[package]
name = "symgraph"
version = "2026.7.5"
edition = "2021"
description = "Semantic code intelligence library and MCP server - build knowledge graphs of codebases"
license = "MIT"
authors = ["Graham Brooks"]
repository = "https://github.com/grahambrooks/symgraph"
homepage = "https://github.com/grahambrooks/symgraph"
readme = "README.md"
keywords = ["mcp", "code-analysis", "tree-sitter", "semantic-search"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    "target/*",
    ".github/*",
    "devcontainer-feature/*",
    "tests/fixtures/*",
    "*.mcpb",
    "*.png",
]

[dependencies]
# MCP protocol (server-only; gated behind the `server` feature)
rmcp = { version = "2.1.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server"], optional = true }

# HTTP server (server-only)
axum = { version = "0.8", optional = true }
tokio-util = { version = "0.7", optional = true }

# Async runtime (server-only)
tokio = { version = "1", features = ["full"], optional = true }

# JSON Schema derive for MCP request types. Depended on directly (rather than
# via rmcp's re-export) so the request structs compile in CLI-only builds that
# exclude the server stack.
schemars = "1.2"

# Tree-sitter for code parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-scala = "0.26"
tree-sitter-groovy = "0.1.2"
tree-sitter-ruby = "0.23"

# Database
rusqlite = { version = "0.40.0", features = ["bundled"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Error handling
anyhow = "1"

# Parallelism
rayon = "1.10"

# Utilities
ignore = "0.4"
sha2 = "0.11"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18"

[features]
default = ["sqlite", "server"]
sqlite = ["rusqlite"]
# The MCP server (stdio + HTTP transports). Pulls in the async/HTTP stack.
# Disable it (`--no-default-features --features sqlite`) to build the lean,
# CLI-only `symgraph-cli` binary without rmcp/axum/tokio.
server = ["sqlite", "dep:rmcp", "dep:axum", "dep:tokio", "dep:tokio-util"]

[dev-dependencies]
tempfile = "3"

# Full binary: CLI query commands + the MCP server (`serve`). Requires the
# `server` feature, so it is skipped in CLI-only builds.
[[bin]]
name = "symgraph"
path = "src/main.rs"
required-features = ["server"]

# CLI-only binary: every query/analysis command minus `serve`, plus
# CLI-oriented extras (watch, reindex, completions, man). Builds without the
# server stack when compiled with `--no-default-features --features sqlite`.
[[bin]]
name = "symgraph-cli"
path = "src/bin/symgraph-cli.rs"
required-features = ["sqlite"]
